# Algorithm_4thEdition

./: .gitignore
01.Fundamentals/: CMakeLists.txt
01.Fundamentals/Src/: main.cpp
01.Fundamentals/data/: orderedData.txt
01Fundamentals/Inc/: binarySearch.h
01Fundamentals/Src/: binarySearch.cpp
02.Sorting/Inc/: helper.h  shellSort.h
02.Sorting/Src/: main.cpp  selectionSort.cpp  shellSort.cpp
02.Sorting/data/: insertionProc.txt  selectionProc.txt  shellProc.txt  unordered.txt
02Sorting/: CMakeLists.txt
02Sorting/Inc/: helper.h  insertionSort.h  mergeSort.h  selectionSort.h  shellSort.h
02Sorting/Src/: helper.cpp  insertionSort.cpp  main.cpp  mergeSort.cpp  selectionSort.cpp  shellSort.cpp
02Sorting/data/: unordered.back.txt
